--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>VaultKey</title>
-  <link rel="shortcut icon" href="/assets/icon.png" type="image/png">
-  <meta property="og:image" content="/assets/preview.png">
+  <link rel="shortcut icon" href="https://safal-tiwari.github.io/vaultkey/assets/favicon.png" type="image/png">
+  <meta property="og:image" content="https://safal-tiwari.github.io/vaultkey/assets/preview.png">
   <meta name="author" content="Safal Tiwari">
   <meta property="og:type" content="website">
   <meta name="description" content="VaultKey - A modern, responsive login/signup page.">
@@ -49,7 +49,7 @@
       <div class="brand-header">
         <div class="logo-container">
           <div class="logo-icon">
-            <img src="assets/icon.png" alt="VaultKey Logo" class="logo-image">
+            <img src="https://safal-tiwari.github.io/vaultkey/assets/icon.png" alt="VaultKey Logo" class="logo-image">
           </div>
           <h1 class="brand-name">VaultKey</h1>
         </div>
@@ -59,7 +59,7 @@
       <div class="video-container">
         <video id="previewVideo" class="preview-video" autoplay muted loop>
           <!-- <source src="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4"> -->
-          <source src="/assets/Stock.mp4" type="video/mp4">
+          <source src="https://safal-tiwari.github.io/vaultkey/assets/stock.mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
         <div class="video-overlay">
