--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>VaultKey</title>
-  <link rel="shortcut icon" href="https://safal-tiwari.github.io/vaultkey/assets/favicon.png" type="image/png">
-  <meta property="og:image" content="https://safal-tiwari.github.io/vaultkey/assets/preview.png">
+  <title>apexkey</title>
+  <link rel="shortcut icon" href="https://safal-tiwari.github.io/apexkey/assets/favicon.png" type="image/png">
+  <meta property="og:image" content="https://safal-tiwari.github.io/apexkey/assets/preview.png">
   <meta name="author" content="Safal Tiwari">
   <meta property="og:type" content="website">
-  <meta name="description" content="VaultKey - A modern, responsive login/signup page.">
+  <meta name="description" content="apexkey - A modern, responsive login/signup page.">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -49,9 +49,9 @@
       <div class="brand-header">
         <div class="logo-container">
           <div class="logo-icon">
-            <img src="https://safal-tiwari.github.io/vaultkey/assets/icon.png" alt="VaultKey Logo" class="logo-image">
+            <img src="https://safal-tiwari.github.io/apexkey/assets/icon.png" alt="apexkey Logo" class="logo-image">
           </div>
-          <h1 class="brand-name">VaultKey</h1>
+          <h1 class="brand-name">ApexKey</h1>
         </div>
       </div>
 
@@ -59,7 +59,7 @@
       <div class="video-container">
         <video id="previewVideo" class="preview-video" autoplay muted loop>
           <!-- <source src="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4"> -->
-          <source src="https://safal-tiwari.github.io/vaultkey/assets/Stock.mp4" type="video/mp4">
+          <source src="https://safal-tiwari.github.io/apexkey/assets/Stock.mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
         <div class="video-overlay">
